--- a/styles/style.css
+++ b/styles/style.css
@@ -1,27 +1,27 @@
 @font-face {
     font-family: 'Urbanist';
-    src: url('/fonts/Urbanist-Regular.ttf') format('truetype');
+    src: url('./fonts/Urbanist-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Syncopate';
-    src: url('fonts/Syncopate-Regular.ttf') format('truetype');
+    src: url('./fonts/Syncopate-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Noto Sans';
-    src: url('fonts/NotoSans-Regular.ttf') format('truetype');
+    src: url('./fonts/NotoSans-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Playfair Display';
-    src: url('fonts/PlayfairDisplay-Regular.ttf') format('truetype');
+    src: url('./fonts/PlayfairDisplay-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
