--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,27 @@
+/*********************/
+/* CUSTOM PROPERTIES */
+/*********************/
+:root {
+    --color-text: rgb(21, 22, 20);
+    --color-background: rgb(235, 255, 241);
+  }
+  
+  @font-face {
+    font-family: "PP-Mori-Light";
+    src: url("/font/PPMori-Light.0f42b11c.woff2");
+  }
+  
+  @font-face {
+    font-family: "PP-Mori-Regular";
+    src: url("/font/PPMori-Regular.b106d8fe.woff2");
+  }
+  
+  @font-face {
+    font-family: "PP-Mori-SemiBold";
+    src: url("/font/PPMori-SemiBold.ab48fc0e.woff2");
+  }
+
+
 /**************/
 /* CSS REMEDY */
 /**************/
@@ -10,33 +34,11 @@
 
 body {
   margin: 0 auto;
-  background: #eee;
+  background: var(--color-background);
   overflow-x: hidden;
   padding: 0;
 }
 
-/*********************/
-/* CUSTOM PROPERTIES */
-/*********************/
-:root {
-  --color-text: rgb(21, 22, 20);
-  --color-background: rgb(235, 255, 241);
-}
-
-@font-face {
-  font-family: "PP-Mori-Light";
-  src: url("/font/PPMori-Light.0f42b11c.woff2");
-}
-
-@font-face {
-  font-family: "PP-Mori-Regular";
-  src: url("/font/PPMori-Regular.b106d8fe.woff2");
-}
-
-@font-face {
-  font-family: "PP-Mori-SemiBold";
-  src: url("/font/PPMori-SemiBold.ab48fc0e.woff2");
-}
 
 /**************/
 /* Main fonts */
@@ -65,6 +67,8 @@ p {
   left: 1em;
   z-index: 1001;
   display: inline-block;
+  mix-blend-mode: difference;
+  filter: invert();
 }
 
 /* Remove the underline effect from the logo */
@@ -93,7 +97,7 @@ p {
   width: 32px;
   height: 32px;
   fill: none;
-  stroke: #151614;
+  stroke: var(--color-text);
   position: absolute;
   transition: opacity 0.3s ease;
 }
@@ -132,7 +136,7 @@ p {
   left: 0;
   width: 100%;
   height: 0;
-  background-color: black;
+  background-color: var(--color-text);
   overflow: hidden;
   z-index: 999;
   transition: height 0.3s ease-in-out;
@@ -158,7 +162,7 @@ p {
 }
 
 .nav .nav-wrapper nav a {
-  color: white;
+  color: var(--color-background);
   font-size: 2.3em;
   text-decoration: none;
   margin: 15px 0;
@@ -181,7 +185,7 @@ p {
 nav a {
   position: relative;
   display: inline-block;
-  color: white;
+  color: var(--color-background);
   text-decoration: none;
   transition: color 0.3s ease;
 }
@@ -191,7 +195,7 @@ nav a::after {
   position: absolute;
   width: 0;
   height: 2px;
-  background-color: white;
+  background-color: var(--color-background);
   bottom: 0;
   left: 0;
   transition: width 0.4s ease;
